# mcp-xhs-publisher

./: .cursorignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: mcp-protocol.mdc  mcp-python-style.mdc  mcp-server-guidelines.mdc
.github/workflows/: build.yml  code-quality.yml  multi-python-test.yml  publish.yml  security-scan.yml
src/mcp_xhs_publisher/: __init__.py  __main__.py  config.py  main.py  mcp_tools.py  publisher.py  ready_flag.py  utils.py
src/mcp_xhs_publisher/models/: __init__.py  base_schemas.py  tool_io_schemas.py
src/mcp_xhs_publisher/resources/: __init__.py
src/mcp_xhs_publisher/services/: __init__.py  xhs_client.py
src/mcp_xhs_publisher/tests/: __init__.py  test_config_loader.py
src/mcp_xhs_publisher/tools/: __init__.py  publish_executor.py  tool_registry.py
src/mcp_xhs_publisher/util/: __init__.py  config_loader.py  cookie_manager.py  logging.py
tests/: run_login_test.py  test_login.py  test_login_real.py  test_tools.py  test_uvx.py
tests/example/: login_phone.py
